--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div id="Work" class="tabcontent">
           <p class="main">
-            This is where I will post my work history and the work I am currently doing. This will be placed in a chronological order, so from my current stupid unemployment to the first internship I ever had. That's how it be sometimes.
+            This is my work history as well as the current position or positions I hold.
             <br>
             <br>
             Click on the companies' logos to see what position I held with them and explore the work I've done!
@@ -231,7 +231,7 @@
             <div class="contentBx active" id="content1">
                 <div>
                   <div class="Text">
-                    <h2> Languages <hr> </h2>     
+                    <h2> Languages </h2>     
                     <p> French </p><span class="bar"><span class="french"></span></span>
                     <p> English </p><span class="bar"><span class="english"></span></span>
                     <p> Spanish </p><span class="bar"><span class="spanish"></span></span>
@@ -246,7 +246,7 @@
               <div class="contentBx"  id="content2">
                 <div>
                   <div class="Text">
-                    <h2> Microsoft Office <hr> </h2>
+                    <h2> Microsoft Office </h2>
                     <p> Excel </p><span class="bar"><span class="excel"></span></span>
                     <p> PowerPoint </p><span class="bar"><span class="powerpoint"></span></span>
                     <p> Word </p><span class="bar"><span class="word"></span></span>
