--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
         <div id="Work" class="tabcontent">
-          <p class="main">
+          <p class="main" style="text-align: center;">
             This is my work history as well as the current position or positions I hold.
             <br>
             <br>
