--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 Determining which cuisine was the most popular depended on multiple factors. For one, the distribution of restaurants varied from neighborhood to neighborhood, as one would expect. Some boroughs had more diversified cuisine and some had more restaurants, but significantly less diversity. The deciding factor was which cuisine had the greatest presence, or in other words, which cuisine had the most restaurants in Denver. The calculations showed that Mexican cuisine was the most prominent type, with 189 restaurants in Denver, with pizza places and American restaurants in close second and third, with 163 and 162, respectively. All cuisine types that represented less than 1% of the distribution were to be appended to the “Other” type to simplify visualizations. As you can see below, this pie chart represents the distribution of restaurant types in Denver as determined by my project.
                  <br>
                  <br>
-                 <img src = "assets/images/IBMProjPieChart.png" style="max-width:100%; text-align:center; float:center; align-items: center; margin: auto;"/>
+                 <img src = "assets/images/IBMProjPieChart.png" style="max-width:100%; text-align:center; vertical-align:middle; align-items: center; margin: auto;"/>
                  <br>
                  <br>
                 </p>
