--- a/index.html
+++ b/index.html
@@ -140,10 +140,19 @@
           <div class="collapsiblecontent">
             <h3> OctaneX Technologies <br> Data Science Intern </h3>
               <p>
-                From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX Technologies, formerly known as Standard Alcohol at the time. I had numerous roles throughout my year there that each provided me with valuable experience and knowledge in a truly interesting industry.
+                From June 2018 to June 2019, I had the pleasure of working as a Data Science Intern at OctaneX Technologies, formerly known as Standard Alcohol at the time.  As a Data Science Intern, I performed various tasks such as software engineering, database architecture and management, product analysis and development, data analytics, and reports generation.
                 <br>
                 <br>
-                As a Data Science Intern, my role included software engineering and architecture, database creation and management, product analysis and development, as well as analytic reports generation.
+              </p>
+              <h3> OctaneX Optimizer </h3>
+              <p>
+              The first project I worked on at OctaneX Technologies was the OctaneX Optimizer. I was given the task of designing, developing, and coding the software with the creative guidance of my supervisors. This consisted of creating an easy-to-use and visually appealing tool with the purpose of optimizing fuel blends under the desired specifics of 38 constraints given a selection of over a hundred molecules through linear and non-linear programming. This involved a combination of complex mathematics implemented through code and to quickly learn previously unfamiliar programming environments. 
+              <br>
+              <br>
+              The OctaneX Optimizer has since been awarded a copyright by the U.S. Copyright Office, and a registered trademark by the U.S. Patent and Trademark Office.
+              <br>
+              <br>
+              Upon completing the software my new role in this project evolved to implementing an automatic analytic reports generator in the software and to maintain the updates of the OctaneX Optimizer. These reports would provide in-depth information on the blends concocted by the software such as logistics facilitation, actionable insights on product development, and serve as quality control to present potential improvements in calculations.
               </p>
           </div>
           <br>
