--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </button>
           <div class="collapsiblecontent">
             <h3> Aspen Growth Ventures, LLC <br> Data Analystics Intern </h3>
-            <p>As a Data Analytics Intern, my role included database creation and management, product design and development, and data analytics.
+            <p>As a Data Analytics Intern at AGV, my role included database creation and management, product design and development, and data analytics. I was tasked with developing and implementing an environment for real-time data uptake from market data sources in the energy and specialty chemicals sector that would perform different analyses. This project merged SQL organization and Python package methodologies to create an easy-to-use database that used SQL queries to navigate, and Python package methods to provide visualizations, regression analysis, inferential statistics, hypothesis testing, and forecasting on data that it would append in real-time. The goal of this project was to faciliate screening and analyzing market data as part of a due diligence process for a private equity fund.
             </p>
           </div>
          </div> 
