--- a/index.html
+++ b/index.html
@@ -410,8 +410,6 @@
                <br>
                <br>
                 The main dataframe to be used to determine the candidate neighborhoods would have 9 descriptive columns: Neighborhood ID, neighborhood, latitude, longitude, number of Mexican restaurants, number of restaurants, number of categories, 1st most common restaurant, and the frequency value of Mexican restaurants. Using these defining features, I would apply constraints as mentioned earlier to determine the proper candidate neighborhoods. I would base a candidate neighborhood if the number of restaurants per neighborhood is greater than 10, if the most common restaurant type is not Mexican, and if the Mexican restaurant frequency in the neighborhood is less than 0.125. I applied these measures and appended the remaining dataframe to a folium map.
-
-
                 </p>
 
                 <h3> Results </h3>
@@ -420,11 +418,9 @@
                  <br>
                  <br>
                Our analysis shows us that there are 17 neighborhoods in Denver that satisfy all statistical conditions to be optimal places to open up a new Mexican restaurant. These decisions were made by calculations based on a filter of 1200 meters from the center of each neighborhood that captured 4600+ venues at first, which we slimmed down to around 1000+ restaurants. Choosing the data features for the Venue Categories were vital to the analysis as it provided us with the range of possible restaurants to use in this project. As we can see from the map, the neighborhoods of focus are for the main part concentrated near the business center of Denver, Capitol Hill. This is great news as this is the busiest area of Denver, where socio-economic dynamics are optimal, and the wide range of diversity in the area makes it so a new restaurant would fit right in. 
-
                 </p>
 
-                 <h3> Discussion 
- </h3>
+                 <h3> Discussion </h3>
                 <p>
                  I decided not to specify addresses and pinpointing potential locations within the neighborhoods as my capabilities are limited in those aspects and I wouldn't be able to decipher what is a realistic potential address from what could be in the middle of a building. I decided to leave that information for interpretation of the reader, who if interested would be keen to figure out a desirable spot within that neighborhood. 
 
