--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<meta charset="utf-8">
     	<title>Georges Brunet</title>
     	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    	<link rel="shortcut icon" type="image/png" href="assets/images/gabwsicon2.png"/>
+    	<link rel="shortcut icon" type="image/png" href="assets/images/gabicon.png"/>
     </head>
     <body>
       <h1>
@@ -443,6 +443,7 @@
 
             </div>
           </div>
+          <h2> MORE COMING SOON! </h2>
         </div>
 
 
