--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 		    Georges Brunet
 		  </h1>
         
-      <h6> 
-        Data Analyst & Scientist
-        <br> Programmer, Artist, Video Game Enthusiast
-      </h6>
+      <h4> 
+        Data Analyst & Scientist, Programmer, and Artist <br> living in Niwot, Colorado
+      </h4>
 
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
