--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  </h1>
         
       <h4> 
-        Data Analyst & Scientist, Programmer, and Artist <br> living in Niwot, Colorado
+        Data Analyst & Scientist, Programmer, <br>and Artist  living in Niwot, Colorado
       </h4>
 
 <div class="tab">
