--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     Hello there!
   </h3>
   <p class="main">
-      My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers and so Data Science is the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
+      My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers so I found Data Science to be the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
     <br>
     <br>
       I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
