--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
           <div class="flex-container">
             <button class="collapsible">
-              <h2> IBM Data Science Professional Certificate <br> Capstone Project </h2>
+              <h2 style="font-family: Montserrat;"> IBM Data Science Professional Certificate <br> Capstone Project </h2>
             </button>
             <div class="collapsiblecontent">
 
