--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  </h1>
         
       <h4> 
-        Data Analyst & Scientist, Programmer, <br>and Artist  living in Niwot, Colorado
+        Data Analyst & Scientist, Programmer, <br>and Game Developer living in Niwot, Colorado
       </h4>
 
 <div class="tab">
@@ -31,13 +31,25 @@
     Hello there!
   </h3>
   <p class="main">
-      My name is Georges Brunet and I’m an aspiring Data Scientist based in Niwot, Colorado. I love being able to tell a story with the help of numbers so I found Data Science to be the perfect intersection of creativity and mathematics. While I do enjoy working alone, I feel that the best insights are gathered through collaboration and that is why I love to work with people on Data Science projects. 
+      My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
+      I love to play video games and am fascinated by the work behind them, whether it be an AAA title or something as simple as Flappy bird.
+      I have had a considerable amount of experience in Data Science and Mathematics and intend on converting these skills into creating wonderful games.
+      I am currently studying the field of game development as an individual, but I will be providing content on my creations and the like as I learn and practice.
+      These projects will be available in the projects tab, as well as other projects I have completed in different fields.
+       
     <br>
     <br>
-      I am a French native but I have lived and studied in different parts of the world. I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey), Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado. I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be sculptures or paintings, watch sports, or my personal favorite: play video games.
+      I am a French native but I have lived and studied in different parts of the world. 
+      I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey),
+       Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado.
+        I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be s
+        culptures or paintings, watch sports, or my personal favorite: play video games.
     <br>
     <br>
-      I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
+      I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics 
+      with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university 
+      I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of
+       the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
     <br>
     <br>
       Feel free to explore my website to learn more about the work that I have done and what my current projects are!
