--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
   </h3>
   <p class="main">
       My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
-      Ever since I was a little boy, I have always loved to play video games and been fascinated by the work behind them.
-       Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art.
-      I have had a good amount of experience in Data Science and Mathematics in professional settings but I intend on converting these skills into creating wonderful games.
-      I am currently studying the field of game development and creating as I learn, but I will be providing content and information on my creations as I continue to learn.
-      These projects will be available in the projects tab, as well as other projects I complete or have completed in different fields. Please have a look around!
+      Ever since I was a little boy, I have always loved to play video games and been fascinated by the work behind them. 
+      Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art. 
+      I have had a good amount of experience in Data Science and Mathematics in professional settings but I intend on converting these skills into creating wonderful games. 
+      I am currently studying the field of game development and creating as I learn.
+      These creations will be available in the projects tab, as well as other projects I complete or have completed in different fields.
+    <br>
+    <br>
+      Please have a look around!
        
     <br>
     <br>
