--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
       Whether the game is a triple - A title or something as simple as Flappy bird, on a high end desktop or a SNES, I have always seen the charm of the art. 
       I have had a good amount of experience in Data Science and Mathematics in professional settings but I intend on converting these skills into creating wonderful games. 
       I am currently studying the field of game development and creating as I learn.
-      These creations will be available in the projects tab, as well as other projects I complete or have completed in different fields.
-    <br>
-    <br>
-      Please have a look around!
+      These creations will be available in the projects tab, as well as other past, present and future projects!
        
     <br>
     <br>
