--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  </h1>
         
       <h4> 
-        Data Analyst & Scientist, Programmer, <br>and Game Developer living in Niwot, Colorado
+        Data Scientist, Programmer, and <br>Game Developer living in Niwot, Colorado
       </h4>
 
 <div class="tab">
