--- a/index.html
+++ b/index.html
@@ -210,38 +210,18 @@
               </div>
             <div class="icon">
                 <div class="iconBx" data-id = "content3">
-                <h3> Python </h3>
+                <h3> Programming </h3>
                   </div>
               </div>
               <div class="icon">
                 <div class="iconBx" data-id = "content4">
-                <h3> Python Packages </h3>
+                <h3> Data Science </h3>
                   </div>
               </div>
               <div class="icon">
                 <div class="iconBx" data-id = "content5">
-                  <h3> SQL </h3>
-                </div>
-              </div>
-              <div class="icon">
-                <div class="iconBx" data-id = "content6">
                   <h3> Web Development </h3>
                 </div>
-              </div>
-                  <div class="icon">
-                <div class="iconBx" data-id = "content7">
-                <h3> C++ </h3>
-                  </div>
-              </div>
-                  <div class="icon">
-                <div class="iconBx" data-id = "content8">
-                <h3> R/Rstudio </h3>
-                  </div>
-              </div>
-                  <div class="icon">
-                <div class="iconBx" data-id = "content9">
-                <h3> Matlab </h3>
-                  </div>
               </div>
           </div>
 
@@ -277,8 +257,9 @@
               <div class="contentBx" id="content3">
                 <div>
                     <div class="Text">
-                      <h2> Python </h2>
+                      <h2> Programming </h2>
                       <p> Python </p><span class="bar"><span class="python"></span></span>
+                      <p> C++ </p><span class="bar"><span class="cplusplus"></span></span>
                       <br>
                       <br>
                     </div>
@@ -287,7 +268,8 @@
               <div class="contentBx" id="content4">
                 <div>
                     <div class="Text">
-                      <h2> Python Packages </h2>
+                      <h2> Data Science </h2>
+                      <p> Python Packages</p>
                       <p> NumPy </p><span class="bar"><span class="numpy"></span></span>
                       <p> Pandas </p><span class="bar"><span class="pandas"></span></span>
                       <p> SciPy </p><span class="bar"><span class="scipy"></span></span>
@@ -295,6 +277,10 @@
                       <p> Seaborn </p><span class="bar"><span class="seaborn"></span></span>
                       <p> Scikit-learn </p><span class="bar"><span class="scikitlearn"></span></span>
                       <p> Statsmodels </p><span class="bar"><span class="statsmodels"></span></span>
+                      <p> Other </p>
+                      <p> SQL </p><span class="bar"><span class="sql"></span></span>
+                      <p> R/Rstudio </p><span class="bar"><span class="rstudio"></span></span>
+                      <p> Matlab </p><span class="bar"><span class="matlab"></span></span>
                       <br>
                       <br>
                     </div>
@@ -303,50 +289,10 @@
               <div class="contentBx" id="content5">
                 <div>
                   <div class="Text">
-                      <h2> SQL </h2>
-                      <p> SQL </p><span class="bar"><span class="sql"></span></span>
-                      <br>
-                      <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx" id="content6">
-                <div>
-                  <div class="Text">
                       <h2> Web Development </h2>
                       <p> HTML </p><span class="bar"><span class="html"></span></span>
                       <p> CSS3 </p><span class="bar"><span class="css"></span></span>
                       <p> JavaScript </p><span class="bar"><span class="javascript"></span></span>
-                      <br>
-                      <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx" id="content7">
-                <div>
-                  <div class="Text">
-                    <h2> C++ </h2>
-                    <p> C++ </p><span class="bar"><span class="cplusplus"></span></span>
-                    <br>
-                    <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx" id="content8">
-                <div>
-                  <div class="Text">
-                    <h2> R/Rstudio </h2>
-                    <p> R/Rstudio </p><span class="bar"><span class="rstudio"></span></span>
-                    <br>
-                    <br>
-                  </div>
-                </div>
-              </div>
-              <div class="contentBx" style="position:relative;" id="content9">
-                <div>
-                  <div class="Text">
-                    <h2> Matlab </h2>
-                      <p> Matlab </p><span class="bar"><span class="matlab"></span></span>
                       <br>
                       <br>
                   </div>
