--- a/index.html
+++ b/index.html
@@ -346,6 +346,18 @@
                 HarvardX Computer Science for Game Development <br> Assignments
               </h2>
             </button>
+            <div class = "collapsiblecontent">
+              <button class = "collapsible">
+                <h2> test1 </h2>
+              </button>
+              <button class = "collapsible">
+                <h2> test2 </h2>
+              </button>
+              <button class = "collapsible">
+                <h2> test3 </h2>
+              </button>
+
+            </div>
           </div> 
 
           <div class="flex-container">
