--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               </h2>
             </button>
             <div class = "collapsiblecontent">
-              <button class = "collapsible">
+              <button class = "collapsible" style = "width: 100%">
                 <h2> test1 </h2>
               </button>
               <button class = "collapsible">
