--- a/index.html
+++ b/index.html
@@ -348,13 +348,15 @@
             </button>
             <div class = "collapsiblecontent">
               <button class = "collapsible" style = "width: 60%">
-                <h2> test1 </h2>
+                <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
+              <br>
               <button class = "collapsible">
-                <h2> test2 </h2>
+                <h2 style = "font-family: Montserrat;"> Assignment 1: Flappy Bird </h2>
               </button>
+              <br>
               <button class = "collapsible">
-                <h2> test3 </h2>
+                <h2 style = "font-family: Montserrat;"> Assignment 2: Breakout </h2>
               </button>
 
             </div>
