--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               </h2>
             </button>
             <div class = "collapsiblecontent">
-              <button class = "collapsible" style = "width: 60%">
+              <button class = "collapsible" style = "width: 60%, margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
               <br>
@@ -357,6 +357,18 @@
               <br>
               <button class = "collapsible">
                 <h2 style = "font-family: Montserrat;"> Assignment 2: Breakout </h2>
+              </button>
+              <br>
+              <button class = "collapsible">
+                <h2 style = "font-family: Montserrat;"> Assignment 3: Match 3 </h2>
+              </button>
+              <br>
+              <button class = "collapsible">
+                <h2 style = "font-family: Montserrat;"> Assignment 4: Super Mario Bros </h2>
+              </button>
+              <br>
+              <button class = "collapsible">
+                <h2 style = "font-family: Montserrat;"> Assignment 5: Legend of Zelda </h2>
               </button>
 
             </div>
