--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               </h2>
             </button>
             <div class = "collapsiblecontent">
-              <button class = "collapsible" style = "width: 60%, margin: auto">
+              <button class = "collapsible" style = "width: 60%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
               <br>
