--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 HarvardX Computer Science for Game Development <br> Assignments
               </h2>
             </button>
-            <div class = "collapsiblecontent">
+            <div class = "collapsiblecontent" style = "float:center">
               <button class = "collapsible" style = "width: 60%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
