--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <div>
                     <div class="Text">
                       <h2> Data Science </h2>
-                      <p> Python Packages</p>
+                      <h3> Python Packages</h3>
                       <p> NumPy </p><span class="bar"><span class="numpy"></span></span>
                       <p> Pandas </p><span class="bar"><span class="pandas"></span></span>
                       <p> SciPy </p><span class="bar"><span class="scipy"></span></span>
@@ -309,7 +309,7 @@
                       <p> Seaborn </p><span class="bar"><span class="seaborn"></span></span>
                       <p> Scikit-learn </p><span class="bar"><span class="scikitlearn"></span></span>
                       <p> Statsmodels </p><span class="bar"><span class="statsmodels"></span></span>
-                      <p> Other </p>
+                      <h3> Other </h3>
                       <p> SQL </p><span class="bar"><span class="sql"></span></span>
                       <p> R/Rstudio </p><span class="bar"><span class="rstudio"></span></span>
                       <p> Matlab </p><span class="bar"><span class="matlab"></span></span>
