--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                       <h2> Programming </h2>
                       <p> Python </p><span class="bar"><span class="python"></span></span>
                       <p> C++ </p><span class="bar"><span class="cplusplus"></span></span>
+                      <p> C </p><span class = "bar"><span class="C"></span></span>
                       <p> Lua </p><span class="bar"><span class="lua"></span></span>
                       <br>
                       <br>
