--- a/index.html
+++ b/index.html
@@ -352,23 +352,23 @@
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
               <br>
-              <button class = "collapsible">
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 1: Flappy Bird </h2>
               </button>
               <br>
-              <button class = "collapsible">
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 2: Breakout </h2>
               </button>
               <br>
-              <button class = "collapsible">
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 3: Match 3 </h2>
               </button>
               <br>
-              <button class = "collapsible">
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 4: Super Mario Bros </h2>
               </button>
               <br>
-              <button class = "collapsible">
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 5: Legend of Zelda </h2>
               </button>
 
