--- a/index.html
+++ b/index.html
@@ -351,6 +351,14 @@
               <button class = "collapsible" style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
+              <div class = "collapsiblecontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.
+              </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 1: Flappy Bird </h2>
