--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <button class = "collapsible" style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 0: Pong </h2>
               </button>
-              <div class = "collapsiblecontent">
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
