--- a/index.html
+++ b/index.html
@@ -357,28 +357,68 @@
                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                   dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum. shamamamammamaa</p>
+                    mollit anim id est laborum.</p>
               </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 1: Flappy Bird </h2>
               </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 2: Breakout </h2>
               </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 3: Match 3 </h2>
               </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 4: Super Mario Bros </h2>
               </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
               <br>
               <button class = "collapsible"  style = "width: 100%; margin: auto">
                 <h2 style = "font-family: Montserrat;"> Assignment 5: Legend of Zelda </h2>
               </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
 
             </div>
           </div> 
