--- a/index.html
+++ b/index.html
@@ -420,7 +420,68 @@
                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                     mollit anim id est laborum.</p>
               </div>
+              <br>
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
+                <h3 style = "font-family: Montserrat;"> Assignment 6: Angry Birds </h3>
+              </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
+              <br>
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
+                <h3 style = "font-family: Montserrat;"> Assignment 7: Pokemon </h3>
+              </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
+              <br>
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
+                <h3 style = "font-family: Montserrat;"> Assignment 8: 3D Helicopter Game </h3>
+              </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
+              <br>
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
+                <h3 style = "font-family: Montserrat;"> Assignment 9: Dreadhalls </h3>
+              </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
+              <br>
+              <button class = "collapsible"  style = "width: 100%; margin: auto">
+                <h3 style = "font-family: Montserrat;"> Assignment 10: Portal </h3>
+              </button>
+              <div class = "collapsiblecontent" style = "width: 100%; margin: auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                  dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
+              </div>
             </div>
+            
           <!--</div> 
 
           <div class="flex-container">-->
